--- a/favorite_place/pubspec.yaml
+++ b/favorite_place/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   riverpod: ^2.3.7
   flutter_riverpod: ^2.3.7
   uuid: ^4.1.0
+  image_picker: ^1.0.4
+  location: ^5.0.3
   
 dev_dependencies:
   flutter_test:
