--- a/favorite_place/android/app/src/main/AndroidManifest.xml
+++ b/favorite_place/android/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
         android:label="favorite_place"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+            <meta-data android:name="com.google.android.geo.API_KEY"
+               android:value="AIzaSyCqQtAnVK7DJBTaKAm3e2Qsp4R1QN4jkuo"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
