--- a/favorite_place/pubspec.yaml
+++ b/favorite_place/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   uuid: ^4.1.0
   image_picker: ^1.0.4
   location: ^5.0.3
+  http: ^0.13.6
+  google_maps_flutter: ^2.3.0
   
 dev_dependencies:
   flutter_test:
