--- a/chat_app/pubspec.yaml
+++ b/chat_app/pubspec.yaml
@@ -35,6 +35,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_core: ^2.24.2
+  firebase_auth: ^4.15.3
+  google_fonts: ^4.0.4
+  firebase_storage: ^11.5.6
+  image_picker: ^1.0.4
+  flutter_riverpod: ^2.3.7
+  cloud_firestore: ^4.13.6
 
 dev_dependencies:
   flutter_test:
@@ -59,8 +66,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+  - assets/images/VietFresh.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
