--- a/shopping_app/pubspec.yaml
+++ b/shopping_app/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^4.0.4
   http: ^0.13.6
+  hexcolor: ^3.0.1
+  flutter_colorpicker: ^1.0.3
+  flutter_riverpod: ^2.3.7
 dev_dependencies:
   flutter_test:
     sdk: flutter
