--- a/vietfresh/pubspec.yaml
+++ b/vietfresh/pubspec.yaml
@@ -43,6 +43,9 @@ dependencies:
   flutter_riverpod: ^2.3.7
   cloud_firestore: ^4.13.6
   carousel_slider: ^4.2.1
+  intl: ^0.18.1
+  cached_network_image: ^3.2.3
+  transparent_image: ^2.0.1
 
 dev_dependencies:
   flutter_test:
@@ -69,6 +72,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
   - assets/images/VietFresh.png
+  - assets/images/cactus.png
+  - assets/images/avatar.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
