--- a/vietfresh/pubspec.yaml
+++ b/vietfresh/pubspec.yaml
@@ -73,7 +73,8 @@ flutter:
   assets:
   - assets/images/VietFresh.png
   - assets/images/cactus.png
-  - assets/images/avatar.png
+  - assets/images/success-edit.png
+  - assets/images/recipe.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
