--- a/vietfresh-admin/pubspec.yaml
+++ b/vietfresh-admin/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   image_picker: ^1.0.4
   flutter_riverpod: ^2.3.7
   cloud_firestore: ^4.13.6
+  intl: ^0.18.1
+  cached_network_image: ^3.2.3
 
 dev_dependencies:
   flutter_test:
@@ -69,6 +71,7 @@ flutter:
   assets:
   - assets/images/VietFresh.png
   - assets/images/cactus.png
+  - assets/images/recipe.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
